<resources>
    <string name="app_name">Exercise1</string>

    <string name="txt_name">John McDonald</string>
    <string name="txt_header">Los Angles,CA</string>
    <string name="txt_post">34 Posts</string>
    <string name="txt_follower">1256 Followers</string>
    <string name="txt_about">Him poetic eye.Searched any remedies.Trials .Was poverty a shemes him he dressing mountiaries and suprise haven\'t subject and could a entered would is of to be not posts,doing the never publication legs. </string>
</resources>
