<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_name"
            android:textStyle="bold"
            android:textSize="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_size"

            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

    />

    <ImageView
            android:id="@+id/location"
            android:src="@drawable/ic_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text"
            android:layout_marginLeft="@dimen/text_size"

    />

    <TextView
            android:id="@+id/txt2"
            android:text="@string/txt_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text"
            app:layout_constraintLeft_toRightOf="@id/location"


    />

    <Button
            android:id="@+id/btnfollow"
            android:text="Follow"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:layout_marginTop="@id/txt2"
            android:layout_marginLeft="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/location"
            app:layout_constraintLeft_toLeftOf="@id/location"
    />

    <ImageView
            android:id="@+id/imgauthor"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:src="@drawable/author"
            app:layout_constraintLeft_toRightOf="@id/text"
            app:layout_constraintTop_toTopOf="@id/text"


    />

    <TextView
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_post"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/text_size"
            android:layout_marginLeft="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/btnfollow"
           app:layout_constraintLeft_toRightOf="@id/location"
    />

    <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_follower"
            android:textStyle="bold"
            android:layout_marginRight="12dp"
            android:paddingLeft="12dp"
            android:paddingRight="20dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBaseline_toBaselineOf="@id/txt3"

    />

    <ImageView
            android:id="@+id/img1"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:src="@drawable/book"
            app:layout_constraintHorizontal_chainStyle="spread"
            android:layout_marginLeft="@dimen/text_size"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/txt4"
            app:layout_constraintLeft_toLeftOf="parent"

    />

    <ImageView
            android:id="@+id/img2"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:src="@drawable/b"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/txt3"
            app:layout_constraintLeft_toRightOf="@id/img1"
    />

    <ImageView
            android:id="@+id/img3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/c"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/txt4"
            app:layout_constraintLeft_toRightOf="@id/img2"

    />

    <ImageView
            android:id="@+id/img4"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:src="@drawable/b"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/txt4"
            app:layout_constraintLeft_toRightOf="@id/img3"
    />

    <ImageView
            android:id="@+id/img51"
            android:layout_width="67dp"
            android:layout_height="67dp"
            android:src="@drawable/b"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/txt4"
            app:layout_constraintLeft_toRightOf="@id/img4"
    />

    <ImageView
            android:id="@+id/img5"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_icons8_linkedin"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/img1"
            app:layout_constraintStart_toStartOf="@id/img1"
            app:layout_constraintEnd_toEndOf="@id/img1"

    />

    <ImageView
            android:id="@+id/img6"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_facebook"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/img2"
            app:layout_constraintStart_toStartOf="@id/img2"
            app:layout_constraintEnd_toEndOf="@id/img2"

    />

    <ImageView
            android:id="@+id/img7"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_icons8_youtube"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/img3"
            app:layout_constraintStart_toStartOf="@id/img3"
            app:layout_constraintEnd_toEndOf="@id/img3"

    />

    <ImageView
            android:id="@+id/img8"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_icons8_behance"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/img4"
            app:layout_constraintStart_toStartOf="@id/img4"
            app:layout_constraintEnd_toEndOf="@id/img4"

    />



    <ImageView
            android:id="@+id/img10"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_icons8_twitter"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/img1"
            app:layout_constraintStart_toStartOf="@id/img51"
            app:layout_constraintEnd_toEndOf="@id/img51"

    />

    <TextView
            android:id="@+id/txt5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/line"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/img5"

    />

    <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="About"
            android:textSize="36sp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/text_size"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/txt5"
            app:layout_constraintLeft_toLeftOf="parent"

    />



    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_about"
            android:layout_marginTop="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/about"
            app:layout_constraintLeft_toLeftOf="parent"
            android:paddingLeft="@dimen/text_size"
    />

</androidx.constraintlayout.widget.ConstraintLayout>